cleaned up demos

--- a/DeployMe/DeployMe - Migration Based Deployment.ipynb
+++ b/DeployMe/DeployMe - Migration Based Deployment.ipynb
@@ -30,7 +30,7 @@
                 "NOTE. You can also specify the specific version of the code you want to use. If so, it could look something like this:\n",
                 "\n",
                 "```\n",
-                "#r \"nuget: Microsoft.DotNet.Interactive.SqlServer, 1.0.0-beta.23461.4\"\n",
+                "#r \"nuget: Microsoft.DotNet.Interactive.SqlServer, 1.0.0-beta.24229.4\"\n",
                 "\n",
                 "```\n",
                 "\n",
@@ -95,6 +95,13 @@
             },
             "source": [
                 "## Run the initial PowerShell script to run all the files"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Open the powershell script first to show what's in the file before running."
             ]
         },
         {
@@ -269,6 +276,39 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {
+                "dotnet_interactive": {
+                    "language": "pwsh"
+                },
+                "polyglot_notebook": {
+                    "kernelName": "pwsh"
+                }
+            },
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": []
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "**** Remember rename in Git ****\r\n"
+                    ]
+                }
+            ],
+            "source": [
+                "Copy-item -Path \"C:\\GitRepo\\DBDeployments\\DeployMe\\Demo Files\\DemoSetup.Schema.sql\" -Destination \"C:\\GitRepo\\DBDeployments\\DeployMe\\DeployMe_Migration\\Schemas\\DemoSetup.Schema.sql\" -Force\n",
+                "Copy-Item \"C:\\GitRepo\\DBDeployments\\DeployMe\\Demo Files\\Change Schema - DummyTableAndProcCreation.StoredProcedure.sql\" -Destination \"C:\\GitRepo\\DBDeployments\\DeployMe\\DeployMe_Migration\\StoredProcs\\dbo.DummyTableAndProcCreation.StoredProcedure.sql\" -Force\n",
+                "write-host \"**** Remember to rename the file in Git ****\"\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {
                 "azdata_cell_guid": "41247c35-1e9b-4c5c-a58e-f166ed499ed2",
                 "dotnet_interactive": {
                     "language": "pwsh"
@@ -315,6 +355,11 @@
                     {
                         "aliases": [],
                         "name": "csharp"
+                    },
+                    {
+                        "aliases": [],
+                        "languageName": "T-SQL",
+                        "name": "sql-DeployMeM"
                     },
                     {
                         "aliases": [],
